added tagging system

--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -68,5 +68,8 @@
     {% include scripts/progressBar.liquid %}
     {% include scripts/wechatModal.liquid %}
     {% include scripts/imageLayouts.liquid %}
+
+    <!-- Tag filter script -->
+    <script src="{{ '/assets/js/filter.js' | relative_url }}"></script>
   </body>
 </html>
