--- a/_includes/social.liquid
+++ b/_includes/social.liquid
@@ -76,6 +76,9 @@
 {% if site.keybase_username %}
   <a href="https://keybase.io/{{ site.keybase_username }}" title="Keybase"><i class="fa-brands fa-keybase"></i></a>
 {% endif %}
+{% if site.hackaday_url %}
+  <a href="{{site.hackaday_url }}" title="Hackaday"<i class="ai ai-hackaday"></i></a>
+{% endif %}
 {% if site.gitlab_username %}
   <a href="https://gitlab.com/{{ site.gitlab_username }}" title="GitLab"><i class="fa-brands fa-gitlab"></i></a>
 {% endif %}
