--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,10 +2,15 @@
  * Content
  ******************************************************************************/
 
+html {
+  background-color: transparent !important; 
+}
+
 body {
   padding-bottom: 70px;
   color: var(--global-text-color);
-  background-color: var(--global-bg-color);
+  background-color: transparent !important; 
+  position: relative; 
 
   h1,
   h2,
@@ -18,12 +23,10 @@ body {
 }
 
 body.fixed-top-nav {
-  // Add some padding for the nav-bar.
   padding-top: 56px;
 }
 
 body.sticky-bottom-footer {
-  // Remove padding below footer.
   padding-bottom: 0;
 }
 
@@ -31,23 +34,43 @@ body.sticky-bottom-footer {
   max-width: $max-content-width;
 }
 
-// Profile
 .profile {
   img {
     width: 100%;
   }
 }
 
-// TODO: redefine content layout.
-
 /******************************************************************************
- * Publications
+ * Background Canvas Animation Styling
  ******************************************************************************/
 
-// TODO: redefine publications layout.
+#pde-background-canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1; 
+}
 
-/*****************************************************************************
-* Projects
-*****************************************************************************/
+nav#navbar {
+  background-color: var(--global-bg-color);
+  position: relative; 
+  z-index: 1030; 
+}
 
-// TODO: redefine projects layout.
+div[role="main"].container {
+  // background-color: var(--global-bg-color); // OLD OPAQUE BACKGROUND
+  background-color: transparent; // NEW: Make content area transparent for animation to show through
+  padding: 20px;
+  border-radius: 8px;
+  position: relative; 
+  z-index: 1; 
+}
+
+footer.fixed-bottom,
+footer.sticky-bottom {
+  background-color: var(--global-footer-bg-color);
+  position: relative; 
+  z-index: 1020; 
+}
