--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -40,3 +40,8 @@ $fa-font-path: "../webfonts";
 
 // Tabler icons location
 $ti-font-path: "../fonts";
+
+// Font Families
+$site-title-font-family: 'Jacquard 12 Charted', cursive;
+$heading-font-family: 'EB Garamond', serif;
+$body-font-family: 'EB Garamond', serif;
