--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -48,9 +48,10 @@ body.sticky-bottom-footer {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1; 
+  width: 100vw; /* Changed from 100% */
+  height: 100vh; /* Changed from 100% */
+  z-index: -1;
+  pointer-events: none; /* Added */
 }
 
 nav#navbar {
