--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -42,6 +42,7 @@ $fa-font-path: "../webfonts";
 $ti-font-path: "../fonts";
 
 // Font Families
-$site-title-font-family: 'Jacquard 12 Charted', cursive;
+$site-title-font-family: 'Jacquard 24 Charted', cursive; // Corrected version
+$menu-font-family: 'Jacquard 24 Charted', cursive;     // For menu items
 $heading-font-family: 'EB Garamond', serif;
 $body-font-family: 'EB Garamond', serif;
