--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,11 +3,13 @@
  ******************************************************************************/
 
 html {
-  background-color: transparent !important; 
+  background-color: transparent !important;
+  margin: 0; /* ADDED */
 }
 
 body {
-  padding-bottom: 70px;
+  margin: 0; /* ADDED */
+  padding-bottom: 0; /* CHANGED from 70px */
   color: var(--global-text-color);
   background-color: transparent !important; 
   position: relative; 
@@ -23,7 +25,7 @@ body {
 }
 
 body.fixed-top-nav {
-  padding-top: 56px;
+  padding-top: 0px; /* Changed from 56px */
 }
 
 body.sticky-bottom-footer {
