new link aesthetics

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -43,6 +43,6 @@ $ti-font-path: "../fonts";
 
 // Font Families
 $site-title-font-family: 'Jacquard 24 Charted', cursive; // Corrected version
-$menu-font-family: 'Jacquard 24 Charted', cursive;     // For menu items
+$menu-font-family: 'EB Garamond', serif;     // For menu items
 $heading-font-family: 'EB Garamond', serif;
 $body-font-family: 'EB Garamond', serif;
