--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -555,7 +555,7 @@ footer.sticky-bottom {
 }
 
 .post-title {
-  font-family: $site-title-font-family; 
+  font-family: $heading-font-family; 
   mjx-container[jax="CHTML"][display="true"] {
     display: unset;
   }
