--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -44,5 +44,5 @@ $ti-font-path: "../fonts";
 // Font Families
 $site-title-font-family: 'Jacquard 24 Charted', cursive; // Corrected version
 $menu-font-family: 'Source Serif 4', serif;     // For menu items
-$heading-font-family: 'Source Serif 4', serif;
+$heading-font-family: 'Jacquard 24', cursive;
 $body-font-family: 'Source Serif 4', serif;
