--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,6 +13,7 @@ $max-content-width: {{ site.max_width }};
   "base",
   "distill",
   "cv",
+  "gallery",
   "font-awesome/fontawesome",
   "font-awesome/brands",
   "font-awesome/solid",
