checkpoint, fixed gallery and link text

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -48,7 +48,7 @@ table {
 
 a,
 table.table a {
-  font-family: "Jacquard 24 Charted", sans-serif; /* Changed to Jacquard 24 Charted font */
+  font-family: 'Jacquard 24', cursive;
   color: #EAEAEA; /* Changed to off-white from var(--global-theme-color) */
 
   &:hover {
